--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "@vitejs/plugin-vue": "^5.0.4",
+        "swiper": "^11.1.14",
         "vue": "^3.4.25"
     }
 }
