--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "@primevue/themes": "^4.2.5",
+        "@tailwindcss/typography": "^0.5.16",
         "@vitejs/plugin-vue": "^5.0.4",
         "@vueup/vue-quill": "^1.2.0",
         "primevue": "^4.2.5",
